--- a/GoalPost/Base.lproj/Main.storyboard
+++ b/GoalPost/Base.lproj/Main.storyboard
@@ -55,6 +55,7 @@
                                         <state key="normal" image="addGoal"/>
                                         <connections>
                                             <action selector="addGoalBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rQf-mK-sri"/>
+                                            <segue destination="8HM-2j-UA7" kind="presentation" id="tmP-hy-5AV"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -189,8 +190,138 @@
             </objects>
             <point key="canvasLocation" x="116" y="123.68815592203899"/>
         </scene>
+        <!--Create GoalVC-->
+        <scene sceneID="v8F-cN-THy">
+            <objects>
+                <viewController id="8HM-2j-UA7" customClass="CreateGoalVC" customModule="GoalPost" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" id="jy4-yd-m4r">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vre-F9-3Zj">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vYu-Ec-yo3" userLabel="TitleStack">
+                                        <rect key="frame" x="138" y="36.5" width="98.5" height="21.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GOAL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YKh-1L-5sU">
+                                                <rect key="frame" x="0.0" y="0.0" width="49.5" height="21.5"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="POST" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AVB-UQ-dp7">
+                                                <rect key="frame" x="49.5" y="0.0" width="49" height="21.5"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="18"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dmh-UL-2ke">
+                                        <rect key="frame" x="15" y="35" width="14" height="25"/>
+                                        <state key="normal" image="back"/>
+                                        <connections>
+                                            <action selector="backBtnPressed:" destination="8HM-2j-UA7" eventType="touchUpInside" id="PYj-sz-xlp"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="70" id="8jl-fQ-CJJ"/>
+                                    <constraint firstAttribute="bottom" secondItem="vYu-Ec-yo3" secondAttribute="bottom" constant="12" id="Hnh-0f-9js"/>
+                                    <constraint firstItem="Dmh-UL-2ke" firstAttribute="centerY" secondItem="vYu-Ec-yo3" secondAttribute="centerY" id="PGI-1W-Sp3"/>
+                                    <constraint firstAttribute="height" constant="70" id="PLt-kA-wLb"/>
+                                    <constraint firstItem="vYu-Ec-yo3" firstAttribute="centerX" secondItem="Vre-F9-3Zj" secondAttribute="centerX" id="Q66-RN-Cwm"/>
+                                    <constraint firstItem="Dmh-UL-2ke" firstAttribute="leading" secondItem="Vre-F9-3Zj" secondAttribute="leading" constant="15" id="fOe-EF-lsX"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4Z8-h5-FCQ">
+                                <rect key="frame" x="16" y="78" width="343" height="319"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="What is your goal?" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="8ZF-fj-ywF">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="254"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose one" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fer-J4-BxU">
+                                        <rect key="frame" x="0.0" y="262" width="343" height="20"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="vW1-nE-kAu">
+                                        <rect key="frame" x="0.0" y="290" width="343" height="29"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ZE-8D-XKX">
+                                                <rect key="frame" x="0.0" y="0.0" width="166.5" height="29"/>
+                                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
+                                                <state key="normal" title="SHORT TERM">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="shortTermBtnPressed:" destination="8HM-2j-UA7" eventType="touchUpInside" id="uM7-SM-ecz"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7On-Fo-loy">
+                                                <rect key="frame" x="176.5" y="0.0" width="166.5" height="29"/>
+                                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
+                                                <state key="normal" title="LONG TERM">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="longTermBtnPressed:" destination="8HM-2j-UA7" eventType="touchUpInside" id="AoL-Th-dLp"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5s6-U0-iLm">
+                                <rect key="frame" x="16" y="619" width="343" height="36"/>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                <state key="normal" title="NEXT">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="nextBtnPressed:" destination="8HM-2j-UA7" eventType="touchUpInside" id="cac-Cr-j08"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5s6-U0-iLm" firstAttribute="leading" secondItem="S1U-YV-N6T" secondAttribute="leading" constant="16" id="Hng-q9-mu9"/>
+                            <constraint firstItem="Vre-F9-3Zj" firstAttribute="trailing" secondItem="S1U-YV-N6T" secondAttribute="trailing" id="I8o-da-WLz"/>
+                            <constraint firstItem="Vre-F9-3Zj" firstAttribute="leading" secondItem="S1U-YV-N6T" secondAttribute="leading" id="Vi4-Pi-tTY"/>
+                            <constraint firstItem="S1U-YV-N6T" firstAttribute="trailing" secondItem="4Z8-h5-FCQ" secondAttribute="trailing" constant="16" id="cIo-33-bNU"/>
+                            <constraint firstItem="4Z8-h5-FCQ" firstAttribute="leading" secondItem="S1U-YV-N6T" secondAttribute="leading" constant="16" id="eBQ-Mx-dYa"/>
+                            <constraint firstItem="S1U-YV-N6T" firstAttribute="bottom" secondItem="5s6-U0-iLm" secondAttribute="bottom" constant="12" id="jwr-ZN-g2v"/>
+                            <constraint firstItem="5s6-U0-iLm" firstAttribute="top" secondItem="vW1-nE-kAu" secondAttribute="bottom" constant="222" id="kmZ-2H-7fy"/>
+                            <constraint firstItem="Vre-F9-3Zj" firstAttribute="top" secondItem="jy4-yd-m4r" secondAttribute="top" id="oad-4B-ZZA"/>
+                            <constraint firstItem="S1U-YV-N6T" firstAttribute="trailing" secondItem="5s6-U0-iLm" secondAttribute="trailing" constant="16" id="srP-87-CZW"/>
+                            <constraint firstItem="4Z8-h5-FCQ" firstAttribute="top" secondItem="Vre-F9-3Zj" secondAttribute="bottom" constant="8" id="ybY-dN-LQf"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="S1U-YV-N6T"/>
+                    </view>
+                    <connections>
+                        <outlet property="goalTextView" destination="8ZF-fj-ywF" id="FMg-3I-5n8"/>
+                        <outlet property="longTermBtn" destination="7On-Fo-loy" id="949-yp-fKh"/>
+                        <outlet property="nextBtn" destination="5s6-U0-iLm" id="day-VE-wRI"/>
+                        <outlet property="shortTermBtn" destination="2ZE-8D-XKX" id="KPO-pD-9RF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hwg-bt-ddG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="845.60000000000002" y="123.68815592203899"/>
+        </scene>
     </scenes>
     <resources>
         <image name="addGoal" width="35" height="32"/>
+        <image name="back" width="14" height="25"/>
     </resources>
 </document>
